[project]
name = "dpgbaseapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.3.1",
    "rich>=15.0.0",
]

[project.scripts]
dpgbaseapp = "dpgbaseapp:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
