[project]
name = "dpgbaseapp"
version = "0.1.1"
description = "A set of base structures to facilitate building DearPyGui apps"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Zachary Parmley", email = "zachary.craig@gmail.com" },
]
dependencies = [
    "dearpygui>=2.3.1",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/zparmley/dpgbaseapp"
Repository = "https://github.com/zparmley/dpgbaseapp"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
