[project]
name = "dpgbaseapp"
version = "0.1.3"
description = "A set of base structures to facilitate building DearPyGui apps"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Zachary Parmley", email = "zachary.craig@gmail.com" },
]
dependencies = [
    "cairosvg>=2.9.0",
    "dearpygui>=2.3.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/zparmley/dpgbaseapp"
Repository = "https://github.com/zparmley/dpgbaseapp"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.14.1",
    "pyright>=1.1.410",
]
